# vacancies-parser

./: .gitignore  README.md  pyproject.toml
src/: abc_classes.py  abs_classes.py  api_hh.py  api_sj.py  config.py  controller.py  files_module.py  hh_api.py  interface_console.py  main.py  query_builder.py  sj_module.py  user_interface.py  vacancies.py
