[tool.poetry]
name = "4coursework-parsing-hh"
version = "0.1.0"
description = ""
authors = ["Andrey Potapov <aapot@ya.ru>"]
readme = "README.md"
packages = [{include = "4coursework_parsing_hh"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
